<resources>
    <string name="app_name">Friends Nearby</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="searchFriendsHint">Enter Name</string>

    <string name="pref_show_notifications_key" translatable="false">shownotificaions</string>

    <string name="pref_dist_key">minimum</string>
    <string name="pref_dist_default">1000</string>

    <string name="title_activity_settings">Settings</string>
    <string name="notifications">Notifications</string>

    <string name="pref_notification_sound" translatable="false">notificationsound</string>

    <string name="pref_update_min_default">5</string>
    <string name="pref_update_min_key">timeinterval</string>


    <string name="pref_use_track_list_key">track_list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
